# -ElFuegoDelConocimientoReal

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE-CC-BY-NC-SA  LICENSE-MIT  LICENSING.md  OPTIMIZATION_REPORT.md  PHASE2_INTEGRATION_COMPLETE.md  PHASE2_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  SETUP.md  SUMMARY.md  docker-compose.yml  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
app/: globals.css  layout.tsx  page.tsx
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  PHASE2_GUIDE.md  README.md  SETUP.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_phase2.py
backend/app/: main.py
backend/app/api/endpoints/: auth.py  health.py  ingest.py  search.py  semantic.py  state_sync.py  synthesis.py
backend/app/core/: auth.py  config.py  dependencies.py
backend/app/db/: init_db.py  redis.py  session.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: embedding_service.py
backend/app/services/ingest/: gutenberg.py
backend/app/services/semantic_analysis/: analyzer.py
backend/app/services/state_sync/: sync_service.py
backend/app/services/synthesis/: engine.py
backend/migrations/: 001_add_github_oauth_fields.sql  001_add_github_oauth_fields_rollback.sql  README.md
backend/tests/: test_api.py
components/: BibliotecaViva.tsx  BookCard.tsx  CamaraDeGrados.tsx  ChamberCard.tsx  ClientLayout.tsx  EnhancedSearch.tsx  ForjaDeTextos.tsx  (+9 more)
(+47 files in other folders)
